--- a/medical_clinical_impression/views/medical_clinical_impression.xml
+++ b/medical_clinical_impression/views/medical_clinical_impression.xml
@@ -217,9 +217,54 @@
             </search>
         </field>
     </record>
+    <record model="ir.ui.view" id="medical_clinical_impression_kanban_view">
+        <field
+            name="name"
+        >medical.clinical.impression.kanban (in medical_clinical_impression)</field>
+        <field name="model">medical.clinical.impression</field>
+        <field name="arch" type="xml">
+            <kanban js_class="impression">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div
+                            t-attf-class="oe_kanban_card oe_kanban_global_click"
+                            style="width:100%"
+                        >
+                            <div class="row">
+                                <div class="col-md-2 my-auto">
+                                    <i>
+                                        <field name="validation_date" />
+                                    </i>
+                                </div>
+                                <div class="col-md">
+                                    <div class="row">
+                                        <div class="col-md">
+                                            <field name="validation_user_id" />
+                                        </div>
+                                        <div class="col-md">
+                                            <b>
+                                                <field name="specialty_id" />
+                                            </b>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <field name="summary" />
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
     <record model="ir.actions.act_window" id="medical_clinical_impression_act_window">
         <field name="name">Medical Clinical Impression</field>
         <field name="res_model">medical.clinical.impression</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field
+            name="context"
+        >{'view_ref': 'medical_clinical_impression.medical_clinical_impression_simple_form_view'}</field>
     </record>
 </odoo>
