--- a/medical_clinical_impression/views/medical_family_member_history.xml
+++ b/medical_clinical_impression/views/medical_family_member_history.xml
@@ -54,10 +54,19 @@
                             <field name="sex" />
                         </group>
                         <group attrs="{'invisible': [('unable_to_obtain', '=', True)]}">
+                            <field name="born_date" />
+                        </group>
+                        <group
+                            attrs="{'invisible': ['|', ('unable_to_obtain', '=', True), ('deceased', '=', True)]}"
+                        >
                             <field name="age" />
                         </group>
                         <group attrs="{'invisible': [('unable_to_obtain', '=', True)]}">
                             <field name="deceased" />
+                            <field
+                                name="deceased_date"
+                                attrs="{'invisible':[('deceased', '=', False)]}"
+                            />
                             <field
                                 name="deceased_age"
                                 attrs="{'invisible':[('deceased', '=', False)]}"
